@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.465.2.3 2007-09-17 14:43:41 tr Exp $
+# $Id: CHANGES,v 1.465.2.4 2007-09-18 15:09:36 tr Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,8 +10,10 @@
 # --
 
 2.2.4 (????/??/??)
+ - (2007/09/17) include PDF::API2 in AgentStats
+    only if needed. Because of the same reason as in bug# 2291.
  - (2007/09/17) Fixed bug 2291 - include PDF::API2 in AgentTicketSearch
-    only if needed
+    only if needed.
 2.2.3 (2007/09/13)
  - (2007/09/13) Fixed bug 2285 - Typo in german translation
     "Aktualisierungszeit".
